heimdall/heimdall-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: heimdall-service
  namespace: homeautomation
spec:
  selector:
    app: heimdall
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
