heimdall/heimdall-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heimdall-external
  namespace: homeautomation
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: heimdall.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: heimdall-service
          servicePort: 80
