heimdall/heimdall-ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heimdall
  namespace: homeautomation
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: heimdall.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: heimdall-service
          servicePort: 80
